favicon link rel href changes, .png ext revert to s

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <title> LPC | Info</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale = 1, maximum-scale=1, user-scalable=no" />
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="/favicon/manifest.json">
-<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="/favicon/favicon.ico">
-<meta name="msapplication-config" content="/favicon/browserconfig.xml">
-<meta name="theme-color" content="#fafafa">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/favicons/manifest.json">
+  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <meta name="msapplication-config" content="/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
 <main role="main">
 <section class="sect-banner">
@@ -39,7 +40,7 @@
   <p>LPC is competitive club at <a style ="font-size:2.5vh; font-family:secFont;" href="https://lhs-sfusd-ca.schoolloop.com/" target="_blank">Lowell High School</a> dedicated to promoting music education for youth
  committed to fostering physics education before, throughout, and beyond high school.</p>
   <p> </p>
-    
+
      </p>
 </div>
 </section>
