remove img added tabs move LPC

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           </h1>
           <nav>
               <a href="">About</a>
+              <a href="">Officers</a>
               <a href="">Members</a>
               <a href="">Contact</a>
           </nav>
@@ -57,7 +58,7 @@
 </ul>
 <div class="v-center">
 
-  <a><img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
+  <a></img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
   <p style="font-size:5vh; font-family:secFont; font-weight:500">Lowell Physics Club</p>
   <p>LPC is competitive club at <a style ="font-size:2.5vh; font-family:secFont;" href="https://lhs-sfusd-ca.schoolloop.com/" target="_blank">Lowell High School</a> dedicated to promoting music education for youth
  committed to fostering physics education before, throughout, and beyond high school.</p>
