--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 <body>
   <header>
       <div class="container clearfix">
-          <h1 id="logo">
-              LPC
-          </h1>
+          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,0.7); font-weight:500;">
+              L P C
+          </a></h1>
           <nav>
               <a href="">About</a>
               <a href="">Officers</a>
               <a href="">Members</a>
-              <a href="">Contact</a>
+              <a href="">  Contact Us!</a>
           </nav>
       </div>
   </header>
@@ -58,22 +58,23 @@
 </ul>
 <div class="v-center">
 
-  <a></img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
-  <p style="font-size:5vh; font-family:secFont; font-weight:500">Lowell Physics Club</p>
+<a></img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
+<br>
+  <p style="font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Lowell Physics Club</p>
   <p>LPC is competitive club at <a style ="font-size:2.5vh; font-family:secFont;" href="https://lhs-sfusd-ca.schoolloop.com/" target="_blank">Lowell High School</a> dedicated to promoting music education for youth
  committed to fostering physics education before, throughout, and beyond high school.</p>
-<br><br><br>
-<a style="font-size:3vh; font-family:secFont; font-weight:500"> About </a>
-  <p style="font-size:2vh;">
-LPC provides materials and lectures to further your understanding of physics and to prepare you for yearly competitions through hosting discussions and skirmishes. We’ll try to cover everything taught in an AP Physics 1 course but also explore its deeper applications. In addition, we strive to increase interest and provide services for physics education to others outside of Lowell.
+<p><a style="font-size:3vh; font-family:secFont; font-weight:500"> About Us</a></p>
+  <p style="font-size:2vh;">LPC provides materials and lectures to further your understanding of physics and to prepare you for yearly competitions through hosting discussions and skirmishes. We’ll try to cover everything taught in an AP Physics 1 course but also explore its deeper applications. In addition, we strive to increase interest and provide services for physics education to others outside of Lowell.
      </p>
+  <p style="font-size:2vh;">We split the club body into groups, or “teams,” of 5-6 people to encourage discussion based problem solving and to establish a concrete basis of thinking. Each meeting, we pitch these teams against each other to challenge each’s understanding of physics, normally through problem sets but occasionally with thought experiments or engineering/drafting tasks. Just think debate teams, but physics.
+  </P>
 </div>
 </section>
 
 <footer>
-  <div class="row">
+
     <p>Having issues? Contact <a style ="font-size:2vh; font-family:secFont;"href="https://github.com/pepe-roni" target="_blank">Derrick Ng</a></p>
-  </div>
+
 </footer>
 </main>
 </body>
