fixed height added info made contact us added padding fixed footer change LPC font

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 </section>
 
-<footer>
+<footer style="margin-top:205px;">
 
     <p>Having issues? Contact <a style ="font-size:2vh; font-family:secFont;"href="https://github.com/pepe-roni" target="_blank">Derrick Ng</a></p>
 
