added tab'lighting' remapped nav smaller pages added multiple htmlpages

--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,14 @@
 <body>
   <header>
       <div class="container clearfix">
-          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,0.7); font-weight:500;" href="index.html">
+          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,0.7); font-weight:500;">
               L P C
           </a></h1>
           <nav>
-              <a style="color: rgba(255,255,255,0.5);"href="index.html">About</a>
-              <a style="color: rgba(255,255,255,0.5);"href="">Members</a>
-              <a style="color: rgba(255,255,255,0.5);"href="">Officers</a>
-              <a style="color: rgba(255,255,255,0.5);"href="contact.html">  Contact Us!</a>
+            <a style="color: rgba(255,255,255,0.5);"href="index.html">About</a>
+            <a style="color: rgba(255,255,255,0.5);"href="">Members</a>
+            <a style="color: rgba(255,255,255,0.5);"href="">Officers</a>
+            <a style="color: rgba(255,255,255,1);"href="contact.html">  Contact Us!</a>
           </nav>
       </div>
   </header>
