--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
               L P C
           </a></h1>
           <nav>
-              <a style="color: rgba(255,255,255,0.5);"href="index.html">About</a>
-              <a style="color: rgba(255,255,255,0.5);"href="">Members</a>
-              <a style="color: rgba(255,255,255,0.5);"href="">Officers</a>
+              <a style="color: rgba(255,255,255,0.5);"href="about.html">About</a>
+              <a style="color: rgba(255,255,255,0.5);"href="members.html">Members</a>
+              <a style="color: rgba(255,255,255,0.5);"href="officers.html">Officers</a>
               <a style="color: rgba(255,255,255,0.5);"href="contact.html">  Contact Us!</a>
           </nav>
       </div>
@@ -60,9 +60,9 @@
 
 <a></img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
 <br>
-  <p style="font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Lowell Physics Club</p>
-  <p>LPC is competitive club at <a style ="font-size:2.5vh; font-family:secFont;" href="https://lhs-sfusd-ca.schoolloop.com/" target="_blank">Lowell High School</a> dedicated to promoting music education for youth
- committed to fostering physics education before, throughout, and beyond high school.</p>
+  <p style="font-size:5vh; font-family:secFont; font-weight:500  margin-top:205px;">Lowell Physics Club</p>
+  <p>LPC is competitive club at <a style ="font-size:2.5vh; font-family:secFont;" href="https://en.wikipedia.org/wiki/Lowell_High_School_(San_Francisco)" target="_blank">Lowell High School</a> founded in 2016
+ committed to fostering physics and engineering education before, throughout, and beyond high school.</p>
 
 </div>
 </section>
