--- a/members.html
+++ b/members.html
@@ -42,10 +42,10 @@
               L P C
           </a></h1>
           <nav>
-              <a style="color: rgba(255,255,255,0.5);"href="index.html">About</a>
-              <a style="color: rgba(255,255,255,0.5);"href="">Members</a>
-              <a style="color: rgba(255,255,255,0.5);"href="">Officers</a>
-              <a style="color: rgba(255,255,255,0.5);"href="contact.html">  Contact Us!</a>
+            <a style="color: rgba(255,255,255,0.5);"href="about.html">About</a>
+            <a style="color: rgba(255,255,255,1);"href="members.html">Members</a>
+            <a style="color: rgba(255,255,255,0.5);"href="officers.html">Officers</a>
+            <a style="color: rgba(255,255,255,0.5);"href="contact.html">  Contact Us!</a>
           </nav>
       </div>
   </header>
