refined members page added contact email added coming soon

--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,8 @@
 
 <a></img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
 <br>
-  <p style="font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Lowell Physics Club</p>
-  <p>LPC is competitive club at <a style ="font-size:2.5vh; font-family:secFont;" href="https://lhs-sfusd-ca.schoolloop.com/" target="_blank">Lowell High School</a> dedicated to promoting music education for youth
- committed to fostering physics education before, throughout, and beyond high school.</p>
+  <p style="font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Contact us at lpc.lowell@gmail.com</p>
+
 
 </div>
 </section>
