--- a/members.html
+++ b/members.html
@@ -58,12 +58,16 @@
 </ul>
 <div class="v-center">
 
-<a></img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
-<br>
-  <p style="font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Lowell Physics Club</p>
-  <p>LPC is competitive club at <a style ="font-size:2.5vh; font-family:secFont;" href="https://lhs-sfusd-ca.schoolloop.com/" target="_blank">Lowell High School</a> dedicated to promoting music education for youth
- committed to fostering physics education before, throughout, and beyond high school.</p>
 
+<br>
+  <p style="font-size:2vh;"><a>You are responsible to try your hardest to get stuff right. That’s it.</a>
+As for prerequisites, it is heavily encouraged that you either are taking or have taken Algebra 1. In addition, please check out the outline and recognize topics you’re not familiar with to be able to ask other members about during our sessions.
+To remain a member of LPC, you must attend the <a href="https://www.aapt.org/physicsteam/2017/">FMA Qualifier</a> and at least one outreach/community service/club event, including beautification day or freshman orientation.
+</p>
+<p style="font-size:2vh;">
+FMA Qualifier (January 17-23): 25 MC Problems - 75 Minutes<br>
+Physics Bowl (March 30 - April 15): 40 MC problems - 45 Minutes
+</p>
 </div>
 </section>
 
