smaller font, added resources beta 1 release sizing and padding issues in testing

--- a/members.html
+++ b/members.html
@@ -45,6 +45,7 @@
             <a style="color: rgba(255,255,255,0.5);"href="about.html">About</a>
             <a style="color: rgba(255,255,255,1);"href="members.html">Members</a>
             <a style="color: rgba(255,255,255,0.5);"href="officers.html">Officers</a>
+            <a style="color: rgba(255,255,255,0.5);"href="resources.html">Resources</a>
             <a style="color: rgba(255,255,255,0.5);"href="contact.html">  Contact Us!</a>
           </nav>
       </div>
@@ -64,7 +65,7 @@
 As for prerequisites, it is heavily encouraged that you either are taking or have taken Algebra 1. In addition, please check out the outline and recognize topics you’re not familiar with to be able to ask other members about during our sessions.
 To remain a member of LPC, you must attend the <a href="https://www.aapt.org/physicsteam/2017/">FMA Qualifier</a> and at least one outreach/community service/club event, including beautification day or freshman orientation.
 </p>
-<p style="font-size:2vh;">
+<p style="font-size:2vh; padding-top: 10px;">
 FMA Qualifier (January 17-23): 25 MC Problems - 75 Minutes<br>
 Physics Bowl (March 30 - April 15): 40 MC problems - 45 Minutes
 </p>
