--- a/resources.html
+++ b/resources.html
@@ -44,8 +44,8 @@
           <nav>
             <a style="color: rgba(255,255,255,0.5);"href="about.html">About</a>
             <a style="color: rgba(255,255,255,0.5);"href="members.html">Members</a>
-            <a style="color: rgba(255,255,255,1);"href="officers.html">Officers</a>
-            <a style="color: rgba(255,255,255,0.5);"href="resources.html">Resources</a>
+            <a style="color: rgba(255,255,255,0.5);"href="officers.html">Officers</a>
+            <a style="color: rgba(255,255,255,1);"href="resources.html">Resources</a>
             <a style="color: rgba(255,255,255,0.5);"href="contact.html">  Contact Us!</a>
           </nav>
       </div>
@@ -58,7 +58,11 @@
   <li></li>
 </ul>
 <div class="v-center">
-  <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Coming Soon!</p>
+
+<a></img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
+<br>
+  <p style="font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Coming Soon!</p>
+
 </div>
 </section>
 
