--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
             <a style="color: rgba(255,255,255,1);"href="about.html">About</a>
             <a style="color: rgba(255,255,255,0.5);"href="members.html">Members</a>
             <a style="color: rgba(255,255,255,0.5);"href="officers.html">Officers</a>
+            <a style="color: rgba(255,255,255,0.5);"href="resources.html">Resources</a>
             <a style="color: rgba(255,255,255,0.5);"href="contact.html">  Contact Us!</a>
           </nav>
       </div>
@@ -57,15 +58,11 @@
   <li></li>
 </ul>
 <div class="v-center">
-
-
+  <p style="font-size:1.8vh;">LPC provides materials and lectures to further understanding of physics and to prepare you for yearly competitions through hosting discussions and skirmishes. We’ll cover everything taught in an AP Physics 1 course but also explore its deeper applications. In addition, we strive to increase interest and provide services for physics education to others outside of Lowell.
+We split the club body into groups of 5-6 people to encourage discussion based problem solving and to establish a concrete basis of thinking. Each meeting, we pitch these teams against each other to challenge each’s understanding of physics, normally through problem sets but occasionally with thought experiments or engineering/drafting tasks.<a> Just think debate teams, but physics.</a>
 <br>
-<br>
-  <p style="font-size:2vh;">LPC provides materials and lectures to further understanding of physics and to prepare you for yearly competitions through hosting discussions and skirmishes. We’ll cover everything taught in an AP Physics 1 course but also explore its deeper applications. In addition, we strive to increase interest and provide services for physics education to others outside of Lowell.
-We split the club body into groups, or “teams,” of 5-6 people to encourage discussion based problem solving and to establish a concrete basis of thinking. Each meeting, we pitch these teams against each other to challenge each’s understanding of physics, normally through problem sets but occasionally with thought experiments or engineering/drafting tasks.<a> Just think debate teams, but physics.</a>
-<p style="font-size:2vh;">
-  We’re currently in the process of contacting <a href="http://www.healthiersf.org/ExCELafterschool/">ExCEL afterschool programs </a> and Lowell Science Days for potential outreach opportunities. We’ll have two types of outreach: extended tutoring programs and single day “wow factor” demonstrations at different schools or at <a href="https://sfpl.org/">SFPL.</a>
-</p></p>
+We’re currently in the process of contacting <a href="http://www.healthiersf.org/ExCELafterschool/">ExCEL afterschool programs </a> and Lowell Science Days for potential outreach opportunities. We’ll have two types of outreach: extended tutoring programs and single day “wow factor” demonstrations at different schools or at <a href="https://sfpl.org/">SFPL.</a>
+</p>
 </div>
 </section>
 
