--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
             <a style="color: rgba(255,255,255,0.5);"href="about.html">About</a>
             <a style="color: rgba(255,255,255,0.5);"href="members.html">Members</a>
             <a style="color: rgba(255,255,255,0.5);"href="officers.html">Officers</a>
+            <a style="color: rgba(255,255,255,0.5);"href="resources.html">Resources</a>
             <a style="color: rgba(255,255,255,1);"href="contact.html">  Contact Us!</a>
           </nav>
       </div>
@@ -57,10 +58,8 @@
   <li></li>
 </ul>
 <div class="v-center">
-
-<a></img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
 <br>
-  <p style="font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Contact us at lpc.lowell@gmail.com</p>
+  <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Contact us at lpc.lowell@gmail.com</p>
 
 
 </div>
