--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 </ul>
 <div class="v-center">
 <br>
-  <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Contact us at lpc.lowell@gmail.com</p>
+  <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p>
 
 
 </div>
