added linkedin page

--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
 </ul>
 <div class="v-center">
 <br>
-  <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p>
-
+  <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500;  margin-top:205px;">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p></a>
+    <p style="padding-top: 0px; font-size:4vh; font-family:secFont; font-weight:500;">Follow us on<a href="https://www.linkedin.com/company-beta/18198360/"> LinkedIn!</a></p>
 
 </div>
 </section>
