--- a/members.html
+++ b/members.html
@@ -62,10 +62,12 @@
 
 <br>
   <p style="font-size:2vh;"><a>You are responsible to try your hardest to get stuff right. That’s it.</a>
-As for prerequisites, it is heavily encouraged that you either are taking or have taken Algebra 1. In addition, please check out the outline and recognize topics you’re not familiar with to be able to ask other members about during our sessions.
+As for prerequisites, it is heavily encouraged that you either are taking or have taken Algebra 1. In addition, please check out the <a href="https://docs.google.com/document/d/1XjbKc203sEhFZdjrTELc6uzcczsdsITofUiwY7P_tak/edit">outline</a> and recognize topics you’re not familiar with to be able to ask other members about during our sessions.
 To remain a member of LPC, you must attend the <a href="https://www.aapt.org/physicsteam/2017/">FMA Qualifier</a> and at least one outreach/community service/club event, including beautification day or freshman orientation.
 </p>
-<p style="font-size:2vh; padding-top: 10px;">
+<p style="font-size:1.8vh;padding-top: 10px;">
+Meetings at Room S202: Monday & Friday 3:40 PM - 4:45 PM
+<br>
 FMA Qualifier (January 17-23): 25 MC Problems - 75 Minutes<br>
 Physics Bowl (March 30 - April 15): 40 MC problems - 45 Minutes
 </p>
