--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 <body>
   <header>
       <div class="container clearfix">
-          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,0.7); font-weight:500;">
+          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,0.7); font-weight:500;" href="index.html">
               L P C
           </a></h1>
           <nav>
