--- a/members.html
+++ b/members.html
@@ -42,11 +42,11 @@
               L P C
           </a></h1>
           <nav>
-            <a style="color: rgba(255,255,255,0.5);"href="about.html">About</a>
+            <a href="about.html">About</a>
             <a style="color: rgba(255,255,255,1);"href="members.html">Members</a>
-            <a style="color: rgba(255,255,255,0.5);"href="officers.html">Officers</a>
-            <a style="color: rgba(255,255,255,0.5);"href="resources.html">Resources</a>
-            <a style="color: rgba(255,255,255,0.5);"href="contact.html">  Contact Us!</a>
+            <a href="officers.html">Officers</a>
+            <a href="resources.html">Resources</a>
+            <a href="contact.html">  Contact Us!</a>
           </nav>
       </div>
   </header>
