--- a/about.html
+++ b/about.html
@@ -43,10 +43,10 @@
           </a></h1>
           <nav>
             <a style="color: rgba(255,255,255,1);"href="about.html">About</a>
-            <a style="color: rgba(255,255,255,0.5);"href="members.html">Members</a>
-            <a style="color: rgba(255,255,255,0.5);"href="officers.html">Officers</a>
-            <a style="color: rgba(255,255,255,0.5);"href="resources.html">Resources</a>
-            <a style="color: rgba(255,255,255,0.5);"href="contact.html">  Contact Us!</a>
+            <a href="members.html">Members</a>
+            <a href="officers.html">Officers</a>
+            <a href="resources.html">Resources</a>
+            <a href="contact.html">  Contact Us!</a>
           </nav>
       </div>
   </header>
