--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 <body>
   <header>
       <div class="container clearfix">
-          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,1); font-weight:500;" href="index.html">
-              L P C
+          <h1 id="logo"><a href="index.html">
+            <img style="padding-bottom:50px; width:200px; height:200px;" src="images/logo.png">
+
           </a></h1>
           <nav>
               <a href="about.html">About</a>
