--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <header>
       <div class="container clearfix">
           <h1 id="logo"><a href="index.html">
-            <img style="padding-bottom:50px; width:200px; height:200px;" src="images/logo.png">
+            <img style="border:0px; margin-left:-25px; padding-top:15px; padding-bottom:40px; width:200px; height:150px;" src="images/logo.png">
 
           </a></h1>
           <nav>
@@ -47,7 +47,7 @@
               <a href="members.html">Members</a>
               <a href="officers.html">Officers</a>
               <a href="resources.html">Resources</a>
-              <a href="contact.html">  Contact Us!</a>
+              <a href="contact.html">Contact Us!</a>
           </nav>
       </div>
   </header>
@@ -60,8 +60,8 @@
 </ul>
 <div class="v-center">
 
-<a><img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
-<br>
+<a href="index.html"><img style="padding-top: 10px; border:0px; top:20vh; left:100vh; width:18vh; height:18vh;" src="images/resizedLogo.png"></a>
+</a><br>
   <p style="padding-top: 0px;font-size:5vh; font-family:secFont; font-weight:500  margin-top:205px;">Lowell Physics Club</p>
   <p style="padding-top: 0px;">LPC is competitive non-profit organization at <a style ="font-size:2.5vh; font-family:secFont;" href="https://en.wikipedia.org/wiki/Lowell_High_School_(San_Francisco)" target="_blank">Lowell High School</a> founded in 2016
  committed to fostering physics and engineering education before, throughout, and beyond high school.</p>
