--- a/officers.html
+++ b/officers.html
@@ -38,9 +38,10 @@
 <body>
   <header>
       <div class="container clearfix">
-          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,0.7); font-weight:500;" href="index.html">
-              L P C
-          </a></h1>
+        <h1 id="logo"><a href="index.html">
+          <img style="margin-left:-25px; padding-top:15px; padding-bottom:40px; width:200px; height:150px;" src="images/logo.png">
+
+        </a></h1>
           <nav>
             <a href="about.html">About</a>
             <a href="members.html">Members</a>
@@ -59,6 +60,7 @@
 </ul>
 <div class="v-center">
   <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Coming Soon!</p>
+<a href="index.html"><img style="border:0px; position:absolute; top:91vh; left:2vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
 </div>
 </section>
 
