--- a/about.html
+++ b/about.html
@@ -38,9 +38,10 @@
 <body>
   <header>
       <div class="container clearfix">
-          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,0.7); font-weight:500;" href="index.html">
-              L P C
-          </a></h1>
+        <h1 id="logo"><a href="index.html">
+          <img style="margin-left:-25px; padding-top:15px; padding-bottom:40px; width:200px; height:150px;" src="images/logo.png">
+
+        </a></h1>
           <nav>
             <a style="color: rgba(255,255,255,1);"href="about.html">About</a>
             <a href="members.html">Members</a>
@@ -63,6 +64,8 @@ We split the club body into groups of 5-6 people to encourage discussion based p
 <br>
 We’re currently in the process of contacting <a href="http://www.healthiersf.org/ExCELafterschool/">ExCEL afterschool programs </a> and Lowell Science Days for potential outreach opportunities. We’ll have two types of outreach: extended tutoring programs and single day “wow factor” demonstrations at different schools or at <a href="https://sfpl.org/">SFPL.</a>
 </p>
+
+<a href="index.html"><img style="border:0px; position:absolute; top:91vh; left:2vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
 </div>
 </section>
 
