--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,15 @@
 <body>
   <header>
       <div class="container clearfix">
-          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,0.7); font-weight:500;" href="index.html">
-              L P C
-          </a></h1>
+        <h1 id="logo"><a href="index.html">
+          <img style="margin-left:-25px; padding-top:15px; padding-bottom:40px; width:200px; height:150px;" src="images/logo.png">
+
+        </a></h1>
           <nav>
-            <a style="color: rgba(255,255,255,0.5);"href="about.html">About</a>
-            <a style="color: rgba(255,255,255,0.5);"href="members.html">Members</a>
-            <a style="color: rgba(255,255,255,0.5);"href="officers.html">Officers</a>
-            <a style="color: rgba(255,255,255,0.5);"href="resources.html">Resources</a>
+            <a href="about.html">About</a>
+            <a href="members.html">Members</a>
+            <a href="officers.html">Officers</a>
+            <a href="resources.html">Resources</a>
             <a style="color: rgba(255,255,255,1);"href="contact.html">  Contact Us!</a>
           </nav>
       </div>
@@ -61,7 +62,7 @@
 <br>
   <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500;  margin-top:205px;">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p></a>
     <p style="padding-top: 0px; font-size:4vh; font-family:secFont; font-weight:500;">Follow us on<a href="https://www.linkedin.com/company-beta/18198360/"> LinkedIn!</a></p>
-
+<a href="index.html"><img style="border:0px; position:absolute; top:91vh; left:2vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
 </div>
 </section>
 
