--- a/members.html
+++ b/members.html
@@ -38,9 +38,10 @@
 <body>
   <header>
       <div class="container clearfix">
-          <h1 id="logo"><a style = "font-size:5vh; font-family:secFont; color: rgba(255,255,255,0.7); font-weight:500;" href="index.html">
-              L P C
-          </a></h1>
+        <h1 id="logo"><a href="index.html">
+          <img style="margin-left:-25px; padding-top:15px; padding-bottom:40px; width:200px; height:150px;" src="images/logo.png">
+
+        </a></h1>
           <nav>
             <a href="about.html">About</a>
             <a style="color: rgba(255,255,255,1);"href="members.html">Members</a>
@@ -71,6 +72,8 @@ Meetings at Room S202: Monday & Friday 3:40 PM - 4:45 PM
 FMA Qualifier (January 17-23): 25 MC Problems - 75 Minutes<br>
 Physics Bowl (March 30 - April 15): 40 MC problems - 45 Minutes
 </p>
+
+<a href="index.html"><img style="border:0px; position:absolute; top:91vh; left:2vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
 </div>
 </section>
 </main>
