--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,9 @@
 </ul>
 <div class="v-center">
 <br>
-  <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500;  margin-top:205px;">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p></a>
-    <p style="padding-top: 0px; font-size:4vh; font-family:secFont; font-weight:500;">Follow us on<a href="https://www.linkedin.com/company-beta/18198360/"> LinkedIn!</a></p>
+  </p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500;  margin-top:205px;">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p></a>
+    <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script type="IN/CompanyProfile" data-id="18198360" data-format="inline" data-related="false"></script>
 <a href="index.html"><img style="border:0px; position:absolute; top:91vh; left:2vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
 </div>
 </section>
