test linkedin contact page

--- a/members.html
+++ b/members.html
@@ -73,7 +73,7 @@ FMA Qualifier (January 17-23): 25 MC Problems - 75 Minutes<br>
 Physics Bowl (March 30 - April 15): 40 MC problems - 45 Minutes
 </p>
 
-<a href="index.html"><img style="border:0px; position:absolute; top:91vh; left:2vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
+<a href="index.html"><img style="border:0px; top:85vh; left:50vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
 </div>
 </section>
 </main>
