--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,10 @@
   <li></li>
 </ul>
 <div class="v-center">
-
- <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500;  margin-top:205px;">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p></a>
+ <p style="padding-top: 0px; font-size:4vh; font-family:secFont; font-weight:500;  margin-top:205px;">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p></a>
     <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
 <script type="IN/CompanyProfile" data-id="18198360" data-format="inline" data-related="false"></script>
-<a href="index.html"><img style="border:0px; position:absolute; top:91vh; left:2vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
+<a href="index.html"><img style="border:0px; top:85vh; left:50vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
 </div>
 </section>
 
