--- a/officers.html
+++ b/officers.html
@@ -61,7 +61,7 @@
 <div class="v-center">
   <p style="padding-top: 0px; font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Coming Soon!</p>
 
-<a href="index.html"><img style="border:0px; position:absolute; top:91vh; left:2vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
+<a href="index.html"><img style="border:0px; top:85vh; left:50vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
 </div>
 </section>
 
