--- a/resources.html
+++ b/resources.html
@@ -63,7 +63,7 @@
 <a></img style="border:0px; position:absolute; top:93vh; left:2vh; width:7vh; height7vh;" src="images/resizedLogo.png"></a>
 <br>
   <p style="font-size:4.5vh; font-family:secFont; font-weight:500  margin-top:205px;">Coming Soon!</p>
-<a href="index.html"><img style="border:0px; position:absolute; top:91vh; left:2vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
+<a href="index.html"><img style="border:0px; top:85vh; left:50vh; width:5vh; height5vh;" src="images/resizedLogo.png"></a>
 </div>
 </section>
 
