--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
   <li></li>
 </ul>
 <div class="v-center">
- <p style=" font-size:4vh; font-family:secFont; font-weight:500;  margin-top:100px">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p></a>
+ <p style="padding-bottom: 0px; font-size:4vh; font-family:secFont; font-weight:500;  margin-top:100px;">Contact us at <a href="mailto:lpc.lowell@gmail.com?Subject=Hello%20again">lpc.lowell@gmail.com</p></a>
     <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
 <script type="IN/CompanyProfile" data-id="18198360" data-format="inline" data-related="false"></script>
 
